--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -28,6 +28,7 @@
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.management": "4.4.1",
     "com.unity.xr.oculus": "4.2.0",
+    "com.unity.xr.openxr": "1.11.0",
     "com.vvrvvd.spline-editor": "https://github.com/vvrvvd/Unity-Spline-Editor.git#upm",
     "info.flandre.coacd": "https://github.com/laurentopia/CoACD.git?path=/Packages/info.flandre.coacd#unity",
     "com.unity.modules.ai": "1.0.0",
